# lajp.fi-rs

./: Cargo.toml  Rocket.toml
.github/workflows/: build.yml
migrations/2022-01-13-183043_initial_migration/: down.sql  up.sql
migrations/2023-05-20-114535_init/: down.sql  up.sql
src/: database.rs  error.rs  main.rs  models.rs  payloadverifier.rs  schema.rs  visitcounter.rs
static/: humans.txt  pgp.txt  styles.css
templates/: about-me.html  about-me.html.tera  base.html  base.html.tera  blogbase.html  blogbase.html.tera  blogindex.html  blogindex.html.tera  gallery.html  index.html  index.html.tera  linux-config.html  linux-config.html.tera  not-found.html  not-found.html.tera  stats.html
templates/blog/: fridge-alarm.html  mailserver.html  prime-factorization.html  prime-factorization.html.tera  t440p.html  t440p.html.tera  x200.html  x200.html.tera
