[package]
name = "lajp_fi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
serde_json = "1.0"
regex = "1.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15"
