[package]
name = "lajp_fi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
tera = "1.15"
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.4"
actix-rt = "2.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1"
regex = "1.5"
dotenv = "0.15"
futures-util = "0.3"
rand = "0.8.5"
hex = "0.4.3"
actix-http = "3.2.1"
hmac = "0.12.1"
sha2 = "0.10.2"

[dependencies.reqwest]
version = "0.11.11"
features = ["json", "rustls-tls"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
